0.05
    - Try to reduce false positive test fails by using a PL_FILES trick in the
      Makefile.PL, in order to get an NA instead of a FAIL if BDB is not recent
      enough

0.04
    - for better compat with BDB's tools, stop using logs/data subdirs (old
      layout is still detected)

0.03
    - Update for renamed backend roles

0.02
    - Dependency fixes
    - GIN extractor is optional when dumping/loading database

0.01
    - Initial release