@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               KiokuDB-Backend-BDB
-version:            0.05
+version:            0.06
 abstract:           ~
 author:  []
 license:            unknown
