@@ -14,22 +14,22 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 655ba414dcc7a7898a808057a9e4e39332dcf061 Changes
+SHA1 a40016f965d7df87e57a2e52043c0e7a9350ca91 Changes
 SHA1 27e8f0f72839c1124795ea761e3e9b96733ee4d5 MANIFEST
 SHA1 190e9058eb9c6446a1a3f3ddf15b082f1ecde152 MANIFEST.SKIP
-SHA1 b264e30ea74752f2f00d371dd1fd6ed6d14a086d META.yml
+SHA1 dcc221f998f250b3dd92a08b82d007436078957c META.yml
 SHA1 11635ad486117b621826080b11ca813de349ea44 Makefile.PL
 SHA1 2cf3b7a81e1c7cfbefaae25ffed0542d9b27fbca check_bdb_version.PL
-SHA1 76546a71c190e1d9bcf074fe9d71104b9a0c690b lib/KiokuDB/Backend/BDB.pm
+SHA1 64b9247684b4f17f4a7c2d2d6fb57fc76e587048 lib/KiokuDB/Backend/BDB.pm
 SHA1 863e9fccbb3f8f06a0acac86525e1ff43aecaf78 lib/KiokuDB/Backend/BDB/GIN.pm
 SHA1 4bc81855939a9002f747712f8b2178ee5671fd65 lib/KiokuDB/Backend/BDB/Manager.pm
 SHA1 d982d0f460a2d94e6af09e6891b23ba0ec3c6877 t/bdb.t
-SHA1 64cd21f01e5654ff7d5030b81f9e3bf114af2e6d t/bdb_backend.t
+SHA1 77e6b86e3ffb8b5a11482a7048124f3ad2021b23 t/bdb_backend.t
 SHA1 920a767747efd05aa46b3e295f1a70fe678a47ee t/bdb_gin.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.7 (Darwin)
 
-iD8DBQFJPUQoVCwRwOvSdBgRAg8KAKC7MzrwkLyLeo64gkr68/+Rm8h0FgCgwceu
-wjrJZdJjDH7zbyjScvBxWiY=
-=28wu
+iD8DBQFJSEs8VCwRwOvSdBgRArY3AJ9pG7joKyfGLflPDd3h9WK0ZyqD/wCgumuI
+yBgUF+Cwir/yrVdsfbeg+I4=
+=MfS0
 -----END PGP SIGNATURE-----
